# Range-functions

./: CMakeLists.txt  main.cpp
lib/Algo/: Algo.h  CMakeLists.txt
lib/Algo/AlgorithmSTL/: AlgorithmSTL.cpp  AlgorithmSTL.h  CMakeLists.txt
lib/Algo/XRange/: CMakeLists.txt  xrange.cpp  xrange.h
lib/Algo/zip/: CMakeLists.txt  zip.cpp  zip.h
tests/: CMakeLists.txt  test.cpp
